feat: add navigation delegation